fix green team margin issue on mobile

--- a/stylesheets/responsive_styles.scss
+++ b/stylesheets/responsive_styles.scss
@@ -109,6 +109,8 @@
         margin-bottom: 0;
     }
 
+    .team-list .bg-green p{ margin-bottom: 10px; }
+    
     .team-schedule{
         .rink{ font-size: 13px; }
         table{ margin-bottom: 15px; margin-top: -15px; }
